navigation visibility fixed

--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -53,6 +53,7 @@
     z-index: 1500;
     width: 0;
     opacity: 0;
+    visibility: hidden;
     transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
   &__list {
@@ -109,6 +110,7 @@
   &__checkbox:checked ~ &__nav {
     width: 100%;
     opacity: 1;
+    visibility: visible;
   }
 
   &__icon {
